# lena

./: CMakeLists.txt  scrap.cpp
files/: lena.ppm  lena_small.ppm  test.ppm  test_full.ppm
inc/: helpers.h  obraz.h  parser.h  parser_ppm.h  pgm.h  pixel.h  pixelRGB.h  ppm.h  ppm_parser.h  ppm_states.h  states.h
lib/: state_machine.h
src/: helpers.cpp  main.cpp  obraz.cpp  parser.cpp  parser_ppm.cpp  ppm.cpp  ppm_parser.cpp  ppm_states.cpp
test/: test_obraz.cpp  test_pixel.cpp  zadanie.cpp
test/test_files/: lena.ppm  lena_full.ppm  only_pixels.ppm  pixels_full.ppm
